Practiced a little cssgrid

--- a/index.html
+++ b/index.html
@@ -76,8 +76,85 @@
                 <!-- Button trigger modal -->
                 <a class='button' data-toggle="modal" data-target="#exampleModalCenter3">
                     <img class='project1' src="imgs/picture3.jpg">
-                      <i class="fas fa-search"> </i>
+                    <i class="fas fa-search"> </i>
                 </a>
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModalCenter3" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle3" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalCenterTitle3">Picture 2</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <img class='modalimg' src="imgs/picture3.jpg" alt="" srcset="">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class='projectred'>
+                <!-- Button trigger modal -->
+                <a class='button' data-toggle="modal" data-target="#exampleModalCenter">
+                    <img class='project1' src="imgs/picture1.jpg">
+                    <i class="fas fa-search"> </i>
+                </a>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalCenterTitle">Picture 1</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <img class='modalimg' src="imgs/picture1.jpg" alt="" srcset="">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class='projectgreen'>
+                <!-- Button trigger modal -->
+                <a class='button' data-toggle="modal" data-target="#exampleModalCenter2">
+                    <img class='project1' src="imgs/picture2.jpg">
+                    <i class="fas fa-search"> </i>
+                </a>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle2" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalCenterTitle2">Picture 2</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <img class='modalimg' src="imgs/picture2.jpg" alt="" srcset="">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class='projectblue'>
+                <!-- Button trigger modal -->
+                <a class='button' data-toggle="modal" data-target="#exampleModalCenter3">
+                    <img class='project1' src="imgs/picture3.jpg">
+                    <i class="fas fa-search"> </i>
+                </a>
+
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModalCenter3" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle3" aria-hidden="true">
